
***Working towards Kodi Jarvis release***

- [REMOVED DEPENDENCY] script.thedeadman.functions (Nice one team Kodi!)
- [REMOVED DEPENDENCY] script.globalsearch
- [REMOVED DEPENDENCY] script.artistslideshow
- [REMOVED] DialogPeripheralManager.xml
- [REMOVED] DialogKaraokeSongSelector.xml
- [REMOVED] DialogKaraokeSongSelectorLarge.xml
- [REMOVED] MusicKaraokeLyrics.xml
- [REMOVED] References to "allowoverlay" tag
- [REMOVED] mymusicsongs.xml
- [REMOVED] videooverlay.xml
- [REMOVED] musicoverlay.xml
- [NEW] custom_musicOverlay.xml
- [REMOVED] References to "zorder" tag
- [NEW] DialogPVRInfo.xml
- [REMOVED] DialogPVRGuideInfo.xml
- [REMOVED] DialogPVRRecordingInfo.xml
- [REMOVED] VisualisationPresetList.xml
- [NEW] EventLog.xml
- [MODIFIED] dialogKeyboard.xml - additional labels for BaiduPy input added

- [NEW] DialogAudioDSPManager.xml
- [NEW] DialogAudioDSPSettings.xml

- [MODIFIED] DialogAddonInfo.xml - remove button id="11"
- [MODIFIED] DialogKaiToast.xml - remove ID's 403-405
- [MODIFIED] DialogVideoInfo.xml - add button ID 7, replace user rating value
- [MODIFIED] MyMusicNav.xml - remove files node button



***To do***

Revise fullscreenmusic. Use album art as default background.

DialogProgress Player controls (include details of UDLR skip levels - check skip heading from paused)

Fullscreen music view - add star rating selector

Add No animation mode??

scripted video info screen TEST PLAYMEDIA WORKS + close dialog when playing trailer

MyVideoPlaylist.xml

Use Appropriate weather backgrounds based on todays weather conditions

Finish Pictures section update (info screen esp.)

PVR Recording indicators
PVR Recording scheduler (integrate with recordings)

Check extra button to dialogAddonInfo.xml actually works (auto update)

(use skin helper?) on startup: add check for parent folder items and warn user to turn off: system.getbool(showparentdiritems)

Radio RDS test

Touchscreen controls on Android tablets (file seeking etc)




[B]0.1.0[/B]
- Initial Commit

