@@ -20,8 +20,7 @@
 
             <!--initial animation-->
             <animation type="Windowopen">
-                <effect type="zoom" start="120" time="100" center="auto" tween="linear" easing="out"/>
-                <effect type="fade" start="30" end="100" time="100"/>
+                <effect type="fade" start="0" end="100" time="300"/>
             </animation>
 
             <!--Main content listing-->
